# cdc-places-nl-sql

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: chat.py
src/cdc_places_nl_sql/: cache.py  cli.py  executor.py  llm.py  schema.py  validator.py
tests/: test_cache.py  test_package.py  test_validator.py
